--- a/.github/workflows/python-flask.yml
+++ b/.github/workflows/python-flask.yml
@@ -31,6 +31,7 @@ jobs:
     
     # Step 3: Install dependencies from requirements.txt
     - name: Install dependencies
+      if: ${{ hashFiles('**/requirements.txt') != '' }} # Skipping dependency install because this repo only hosts CI templates
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
